<resources>
    <string name="app_name">VideoJuegos por Jugar</string>
    <string name="titulo_main_activity">Videojuegos por Jugar</string>
    <string name="subtitulo_primer_titulo">The Legend of Zelda: Breath of the Wild</string>
    <string name="description_image">description of image</string>
    <string name="descripcion_imagen">The Legend of Zelda: Breath of the Wild es la nueva aventura de acción de Nintendo para Wii U y Nintendo Switch que nos presenta el título más ambicioso de la saga con un mundo abierto por explorar y en el que realizar todo tipo de acciones como escalar además de otras clásicas como nadar o montar a caballo.\n Link despierta tras un profundo sueño de 100 años en un misterioso templo en el reino de Hyrule; junto a él, deberemos descubrir su pasado mientras escuchamos una voz que nos incita a enfrentarnos a un malvado ser que provocó el llamado cataclismo: Ganon.</string>
    <string name="titulo_video_juego_demo_card">The Legend of Zelda: \n Breath of the Wild</string>
    <string name="puntuacion_video_juego">Puntuacion: </string>
    <string name="numero_puntuacion_videjo_juego">9.7</string>
    <string name="descripcion">Descripcion: </string>
    <string name="valor_descripcion">A masterpiece of design that shows Nintendo at the top of his game and shows an incredible lesson in creating a open world game in all its meanings.</string>
</resources>